--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body{
 }
 
 .nav--logo{
-  max-width: 100px;
+  max-width: 1500px;
 }
 
 .hero {
@@ -24,7 +24,6 @@ body{
 section{
   padding: 20px;
 }
-
 
 
 .hero--text{
@@ -57,9 +56,10 @@ section {
   display:flex;
 }
 
-.sport--logo{
-  width: 100px;
+.card--image {
+  width: 100%;
   border-radius: 9px;
+  margin-bottom: 9px;
 }
 
 .card--stats{
@@ -71,5 +71,22 @@ section {
 .star--logo{
   height: 14px;
 
+}
+
+.card--price {
+  margin-top: auto;
+}
+
+
+.card--title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.cards-list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
 }
 
